--- a/Com.Apphb.Cia.Presentation/app/pages/rules.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/rules.html
@@ -169,8 +169,98 @@
         <div class="page-header">
             <h2>Varianti</h2>
         </div>
-        
-        
+
+        <h3>“A Tema”</h3>
+        <p>Ogni appuntamento ha un tema vincolante, di seguito alcuni esempi:</p>
+        <p>“Serata pomodoro” : tutti i piatti e bibite devono avere a che fare in qualche modo con il pomodoro, verrebbe qualcosa del tipo, pomodori ripieni di antipasto, pasta al pomodoro di primo, pomodori verdi fritti di secondo, pomodori caramellati di dolce, e bloody mary di bibita.</p>
+        <p>“Serata frittura”: tutti i piatti devono prevedere qualcosa di fritto, verrebbe qualcosa del tipo, fritto misto di antipasto, pasta fritta di primo, fritto misto di secondo, gelato fritto di dolce, e vodka alla frittella di bibita.</p>
+        <p>“Serata primitiva”: tutti vestiti da cavernicoli, il fuoco va creato con legno o pietra, e si mangia panini tutti insieme, bevendo acqua di fiume o metal beer doc 2009.</p>
+
+        <h3>“Doppio piatto”</h3>
+        <p>Appuntamento speciale che prevede la preparazione di almeno due pietanze distinte da parte di ogni concorrente, due antipasti diversi, due primi diversi, due secondi diversi, due dolci diversi, e bibite varie, tutto entro i limiti di budget definiti, altrimenti punti persi.</p>
+
+        <h3>“Ti do una mano...forse”</h3>
+        <p>Ognuno porta degli ingredienti per una delle pietanze, ed assegna la preparazione del piatto ad un’altro cuoco, il punteggio va al portatore di ingredienti.</p>
+
+        <div class="page-header">
+            <h2>Normativa ufficiale</h2>
+        </div>
+        <p>Art 1)	I giudici devono essere obbiettivi.</p>
+        <p>Art 2)	I cuochi devono essere onesti.</p>
+        <p>Art 3)	La prestanza fisica non fa punti.</p>
+        <p>Art 4)	Vale tutto in cucina, fintanto che a cucinare è il partecipante.</p>
+        <p>Art 5)	Non è consentito comprare qualcosa di pronto per il dolce, a meno che non preveda preparazione di qualche tipo.</p>
+        <p>Art 6)	Torta Cameo ammessa.</p>
+        <p>Art 7)	Si può spendere più del limite di budget senza incorrere in penalità, solo nel caso in cui il piatto abbia una media di almeno 4 punti bonta.</p>
+        <p>Art 8)	È lecito sminuire i piatti altrui, denigrare ed insultare, ed utilizzare qualunque strategia possa portare alla vittoria.</p>
+        <p>Art 9)	Non è lecito rovinare i piatti altrui in modo fisico.</p>
+        <p>Art 10)	Un animale non ha potere di votare.</p>
+        <p>Art 11)	Neanche un vegetale.</p>
+        <p>Art 12)	Un minerale che parla può votare.</p>
+        <p>Art 13)	Punti bonus per ospite improvvisato.</p>
+        <p>Art 14)	Ognuno è giudice di se stesso.</p>
+        <p>Art 15)	Se un cellulare squilla 10 volte in una serata punti di penalità.</p>
+        <p>Art 16)	Se l’ospitante non è ospitale punti di penalità. Esempi di mancata ospitalità è l’assenza di caffè nel dopo pasto.</p>
+        <p>Art 17)	Se qualcuno dei partecipanti è vegetariano o vegano, una volta al mese non lo è.</p>
+        <p>Art 18)	Se qualcuno è allergico od intollerante a qualcosa, una volta al mese non lo è.</p>
+        <p>Art 19)	Se qualcuno è astemio, una volta al mese non lo è.</p>
+        <p>Art 20)	Obbligatorio onorare ogni piatto e bibita assaggiando.</p>
+        <p>Art 21)	La regola dell’ospitante frutta punti bonus.</p>
+        <p>Art 22)	Solo in situazioni estreme e di impossibilità conclamata a parteciapare alla serata, uno dei partecipanti può farsi sostituire dallo Chef Tony o da altra persona a lui gradita.</p>
+        <p>Art 23)	Non si possono fare regole che escludano partecipanti a priori, si a posteriori.</p>
+        <p>Art 24)	La sostituzione può avvenire una sola volta nel torneo, qualunque assenza non dichiarata con il dovuto anticipo o la richiesta di sostituzione aggiuntiva verrà penalizzata con punti in meno.</p>
+        <p>Art 25)	C’è un obbligo morale a rispettare un certo andamento temporale in cucina, non esiste che per mangiare il secondo dopo il primo devo aspettare due ore...</p>
+        <p>Art 26)	Portare Ippo dà punti in più.</p>
+        <p>Art 27)	Nessuno può giudicare se stesso.</p>
+        <p>Art 28)	È assolutamente lecito far brasare i giudici prima del proprio piatto per stimolare la “fame chimica” ed alterare la percezione del gusto di conseguenza.</p>
+        <p>Art 29)	È lecito raccontare storie incredibili sulla ricetta utilizzata per ingannare la giuria a dare qualche punto in più.</p>
+        <p>Art 30)	Chi rompe paga.</p>
+        <p>a)	È riferito ad oggetti, non a chi frantuma i cogl....</p>
+        <p>Art 31)	La parola dieta non è contemplata una volta al mese, bisogna assaggiare tutto, a costo di sboccare dopo. </p>
+        <p>a)	Si fa eccezione a chi presenti reali problemi di salute.</p>
+        <p>Art 32)	La decisione della giuria è incontestabile, anche se la giuria decidesse di violare il regolamento. </p>
+        <p>Art 33)	Si puo sempre ricorrere in appello.</p>
+        <p>a)	Si può ricorrere fino alla gara successiva alla contestazione.</p>
+        <p>b)	Si rispetteranno i tre gradi di giudizio.</p>
+        <p>c)	Se non si arrivasse ad un verdetto il ricorso verrà respinto.</p>
+        <p>d)	Si vince il ricorso nel caso di maggioranza.</p>
+        <p>e)	Il ricorso verrà richiesto via e-mail.</p>
+        <p>f)	Il giudizio verrà espresso tramite e-mail.</p>
+        <p>Art 34)	È obbligatorio ospitare almeno una serata da parte di ciascun partecipante.</p>
+        <p>Art 35)	La mancanza di impegno verrà penalizzata. </p>
+        <p>Art 36)	È lecito fare un piatto che qualcun altro ha fatto in un altra occasione.</p>
+        <p>a)	È lecito fare un piatto già fatto e farlo peggio.</p>
+        <p>Art 37)	È lecito e vivamente caldeggiato dare nomi epici ai propri piatti.</p>
+        <p>Art 38)	È lecito portarsi qualche invitato che manipoli opportunamente il giudizio dei giudici.</p>
+        <p>Art 39)	La birra deve avanzare.</p>
+        <p>Art 40)	Stoviglie usa e getta implicano una penalità.</p>
+        <p>Art 41)	Non si possono indossare due volte consecutive le stesse calzature.</p>
+        <p>Art 42)	L’ospitante può immettere una nuova regola.</p>
+        <p>Art 43)	L’importante è partecipare???</p>
+        <p>Art 44)	Ogni collasso verra valutato nella sua spettacolarità con punti bonus.</p>
+        <p>Art 45)	La vittoria finale verrà assegnata al secondo in classifica.</p>
+        <p>Art 46)	Chi sbocca punti di penalità.</p>
+        <p>Art 47)	Chi esce sano punti di penalità.</p>
+        <p>Art 48)	La telefonata a Pedro darà punti bonus.</p>
+        <p>Art 49)	Cellulari rigorosamente spenti.</p>
+        <p>Art 50)	I giudici possono castigare con punti penalità verso qualcuno.</p>
+        <p>Art 51)	Vale l’accanimento.</p>
+        <p>Art 52)	La votazione si fa il lunedì successivo.</p>
+        <p>Art 53)	Reclami e proteste vanno fatte dalla votazione alle ore 18 del martedì successivo</p>
+        <p>Art 54)	Il voto di appello si svolgerà nella giornata di mercoledì</p>
+        <p>Art 55)	Il numero dei primi è proporzionale al numero delle cucine</p>
+        <p>Art 56)	L’ospitante può scegliere un luogo diverso dalla propria abitazione, purchè all’interno di un raggio tale per cui la massima percorrenza di ogni partecipante non superi il numero di ore di numero 1.</p>
+        <p>Art 57)	Chi ospita e organizza amichevoli non ha punti.</p>
+        <p>Art 58)	L’uso di sostanze e alimenti biologici da punti bonus</p>
+        <p>Art 59)	Chi porta Nevio ha diritto a punti bonus</p>
+        <p>Art 60)	Chi porta bevande il giorno in cui è presente Nevio, e la bevanda avanza, ha diritto a punti bonus</p>
+        <p>Art 61)	Se hai il parco della vittoria esci gratis di prigione</p>
+        <p>Art 62)	Chi suona il campanello deve essere fatto entrare</p>
+        <p>Art 63)	Chi porta le bevande deve coprire tutte le portate, compreso il caffè con amari</p>
+        <p>Art 64)	E’ consentito cambiare abito una volta durante la serata</p>
+        <p>Art 65)	Chi bagna asciuga</p>
+        <p>Art 66)	Il metal se no è metal punti in meno.</p>
+        <p>Art 67)	Se chi ospita accompagna la cena con eventi sportivi, punti bonus</p>
 
     </div>
 </div>
