--- a/Com.Apphb.Cia.Presentation/app/pages/contact.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/contact.html
@@ -1,9 +1,14 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<div class="container theme-showcase" role="main">
 
-</body>
-</html>
+    <div class="jumbotron">
+        <h1>Contatti</h1>
+        <p>Per chi volesse contattarmi di seguito alcuni posti on-line dove trovarmi</p>
+    </div>
+
+    <div class="jumbotron">
+        <ul>
+            <li></li>
+        </ul>
+    </div>
+
+</div>
