--- a/Com.Apphb.Cia.Presentation/app/pages/rules.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/rules.html
@@ -3,7 +3,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <h1>Regolamento</h1>
-        <p>Di seguito il regolamento del torneo così come era stato definito in origine a Febbraio 2011</p>
+        <p>Di seguito il regolamento del torneo così come era stato definito in origine a Febbraio del 2011, il regolamento aggiornato è in fase di lavorazione e verrà aggiunto appena sarà disponibile.</p>
     </div>
 
 </div>
@@ -22,33 +22,52 @@
         </div>
         <p>
             Di seguito riportiamo una tabella per il calcolo del punteggio previsto per ciascuna delle possibili pietanze:
-            <div class="row">
-
-                <div class="col-xs-6 col-md-3">Piatto</div>
-                <div class="col-xs-6 col-md-3">Punteggio Base</div>
-                <div class="col-xs-6 col-md-3">Costo Massimo</div>
-                <div class="col-xs-6 col-md-3">Bonus possibili</div>
-
-                <div class="col-xs-6 col-md-3">Primo</div>
-                <div class="col-xs-6 col-md-3">10</div>
-                <div class="col-xs-6 col-md-3">15€-20€</div>
-                <div class="col-xs-6 col-md-3">bontà, bello, +0,5 ogni euro risparmiato dal costo massimo, -2 ogni euro speso in più</div>
-
-                <div class="col-xs-6 col-md-3">Secondo e contorno</div>
-                <div class="col-xs-6 col-md-3">10</div>
-                <div class="col-xs-6 col-md-3">25€-30€</div>
-                <div class="col-xs-6 col-md-3">bontà, bello, +2 ogni euro risparmiato dal costo massimo, -0,5 ogni euro speso in più</div>
-
-                <div class="col-xs-6 col-md-3">Dolce</div>
-                <div class="col-xs-6 col-md-3">10</div>
-                <div class="col-xs-6 col-md-3">15€-20€</div>
-                <div class="col-xs-6 col-md-3">bontà, bello, +1 ogni euro risparmiato dal costo massimo, -1 ogni euro speso in più</div>
-
-                <div class="col-xs-6 col-md-3">Bibita</div>
-                <div class="col-xs-6 col-md-3">10</div>
-                <div class="col-xs-6 col-md-3">Illimitato</div>
-                <div class="col-xs-6 col-md-3">bontà, varietà, originalità</div>
-
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <td>Piatto</td>
+                            <td>Punteggio Base</td>
+                            <td>Costo Massimo</td>
+                            <td>Bonus possibili</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="3">Primo</td>
+                            <td rowspan="3">10</td>
+                            <td rowspan="3">15€-20€</td>
+                            <td>bontà</td>
+                            
+                        </tr>
+                        <tr><td>bello</td></tr>
+                        <tr><td>+0,5 ogni euro risparmiato dal costo massimo, -2 ogni euro speso in più</td></tr>
+                        <tr>
+                            <td rowspan="3">Secondo e contorno</td>
+                            <td rowspan="3">10</td>
+                            <td rowspan="3">25€-30€</td>
+                            <td>bontà</td>
+                        </tr>
+                        <tr><td>bello</td></tr>
+                        <tr><td>+2 ogni euro risparmiato dal costo massimo, -0,5 ogni euro speso in più</td></tr>
+                        <tr>
+                            <td rowspan="3">Dolce</td>
+                            <td rowspan="3">10</td>
+                            <td rowspan="3">15€-20€</td>
+                            <td>bontà</td>
+                        </tr>
+                        <tr><td>bello</td></tr>
+                        <tr><td>bontà, bello, +1 ogni euro risparmiato dal costo massimo, -1 ogni euro speso in più</td></tr>
+                        <tr>
+                            <td rowspan="3">Bibita</td>
+                            <td rowspan="3">10</td>
+                            <td rowspan="3">Illimitato</td>
+                            <td>bontà</td>
+                        </tr>
+                        <tr><td>varietà</td></tr>
+                        <tr><td>originalità</td></tr>
+                    </tbody>
+                </table>
             </div>
         </p>
         <p>Il punteggio base viene guadagnato a prescindere dalla pietanza.</p>
@@ -83,57 +102,69 @@
         </div>
         <p>
             Nell’ipotesi di gareggiare una volta al mese, ogni 3° sabato del mese uscirebbe fuori una cosa del genere:
-            <div class="row">
-
-                <div class="col-xs-6 col-md-2">Data</div>
-                <div class="col-xs-6 col-md-2">Antipasti</div>
-                <div class="col-xs-6 col-md-2">Primo*</div>
-                <div class="col-xs-6 col-md-2">Secondo</div>
-                <div class="col-xs-6 col-md-2">Dolce</div>
-                <div class="col-xs-6 col-md-2">Bibite</div>
-
-                <div class="col-xs-6 col-md-2">12/03/2011</div>
-                <div class="col-xs-6 col-md-2">Phil</div>
-                <div class="col-xs-6 col-md-2">Inzo</div>
-                <div class="col-xs-6 col-md-2">Metal</div>
-                <div class="col-xs-6 col-md-2">Dani</div>
-                <div class="col-xs-6 col-md-2">Montra, Dado</div>
-
-                <div class="col-xs-6 col-md-2">18/04/2011</div>
-                <div class="col-xs-6 col-md-2">Dani</div>
-                <div class="col-xs-6 col-md-2">Phil</div>
-                <div class="col-xs-6 col-md-2">Dado</div>
-                <div class="col-xs-6 col-md-2">Montra</div>
-                <div class="col-xs-6 col-md-2">Metal, Inzo</div>
-
-                <div class="col-xs-6 col-md-2">21/05/2011</div>
-                <div class="col-xs-6 col-md-2">Dado</div>
-                <div class="col-xs-6 col-md-2">Metal</div>
-                <div class="col-xs-6 col-md-2">Dani</div>
-                <div class="col-xs-6 col-md-2">Phil</div>
-                <div class="col-xs-6 col-md-2">Inzo, Montra</div>
-
-                <div class="col-xs-6 col-md-2">16/06/2011</div>
-                <div class="col-xs-6 col-md-2">Inzo</div>
-                <div class="col-xs-6 col-md-2">Montra</div>
-                <div class="col-xs-6 col-md-2">Phil</div>
-                <div class="col-xs-6 col-md-2">Metal</div>
-                <div class="col-xs-6 col-md-2">Dani, Dado</div>
-
-                <div class="col-xs-6 col-md-2">16/07/2011</div>
-                <div class="col-xs-6 col-md-2">Metal</div>
-                <div class="col-xs-6 col-md-2">Dado</div>
-                <div class="col-xs-6 col-md-2">Montra</div>
-                <div class="col-xs-6 col-md-2">Inzo</div>
-                <div class="col-xs-6 col-md-2">Phil, Dani</div>
-
-                <div class="col-xs-6 col-md-2">19/08/2011</div>
-                <div class="col-xs-6 col-md-2">Montra</div>
-                <div class="col-xs-6 col-md-2">Dani</div>
-                <div class="col-xs-6 col-md-2">Inzo</div>
-                <div class="col-xs-6 col-md-2">Dado</div>
-                <div class="col-xs-6 col-md-2">Phil, Metal</div>
-
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <td>Data</td>
+                            <td>Antipasti</td>
+                            <td>Primo</td>
+                            <td>Secondo</td>
+                            <td>Dolce</td>
+                            <td>Bibite</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>12/03/2011</td>
+                            <td>Phil</td>
+                            <td>Inzo</td>
+                            <td>Metal</td>
+                            <td>Dani</td>
+                            <td>Montra, Dado</td>
+                        </tr>
+                        <tr>
+                            <td>18/04/2011</td>
+                            <td>Dani</td>
+                            <td>Phil</td>
+                            <td>Dado</td>
+                            <td>Montra</td>
+                            <td>Metal, Inzo</td>
+                        </tr>
+                        <tr>
+                            <td>21/05/2011</td>
+                            <td>Dado</td>
+                            <td>Metal</td>
+                            <td>Dani</td>
+                            <td>Phil</td>
+                            <td>Inzo, Montra</td>
+                        </tr>
+                        <tr>
+                            <td>16/06/2011</td>
+                            <td>Inzo</td>
+                            <td>Montra</td>
+                            <td>Phil</td>
+                            <td>Metal</td>
+                            <td>Dani, Dado</td>
+                        </tr>
+                        <tr>
+                            <td>16/07/2011</td>
+                            <td>Metal</td>
+                            <td>Dado</td>
+                            <td>Montra</td>
+                            <td>Inzo</td>
+                            <td>Phil, Dani</td>
+                        </tr>
+                        <tr>
+                            <td>19/08/2011</td>
+                            <td>Montra</td>
+                            <td>Dani</td>
+                            <td>Inzo</td>
+                            <td>Dado</td>
+                            <td>Phil, Metal</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </p>
 
