--- a/Com.Apphb.Cia.Presentation/app/pages/classification.html
+++ b/Com.Apphb.Cia.Presentation/app/pages/classification.html
@@ -51,6 +51,7 @@
             <h2>Classifica dettagliata</h2>
         </div>
         
+        <!-- PRIMA -->
         <h3>Prima giornata</h3>
         <div class="table-responsive small">
             <table class="table table-bordered table-striped">
@@ -164,6 +165,132 @@
                         <td>1</td>
                         <td>1</td>
                         <td>32</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <small><i class="fa fa-puzzle-piece"></i> - Daniele Cammarata</small>
+        <small><i class="fa fa-music"></i> - Angelo Menno</small>
+        <small><i class="fa fa-camera"></i> - Luca Pradella</small>
+        <small><i class="fa fa-trophy"></i> - Gianluca Montrasio</small>
+        <small><i class="fa fa-suitcase"></i> - Andrea Inzoli</small>
+        <small><i class="fa fa-beer"></i> - Davide Biscuola</small>
+        
+        <!-- SECONDA -->
+        <h3>Seconda giornata</h3>
+        <div class="table-responsive small">
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <td rowspan="2">Concorrente</td>
+                        <td rowspan="2">Pietanza</td>
+                        <td rowspan="2">Portata</td>
+                        <td colspan="6">Voti</td>
+                        <td rowspan="2">Tot</td>
+                        <td rowspan="2"><i class="fa fa-plus"></i></td>
+                        <td rowspan="2"><i class="fa fa-minus"></i></td>
+                        <td rowspan="2">Tot</td>
+                    </tr>
+                    <tr>
+                        <td><i class="fa fa-puzzle-piece"></i></td>
+                        <td><i class="fa fa-music"></i></td>
+                        <td><i class="fa fa-camera"></i></td>
+                        <td><i class="fa fa-trophy"></i></td>
+                        <td><i class="fa fa-suitcase"></i></td>
+                        <td><i class="fa fa-beer"></i></td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Daniele Cammarata</td>
+                        <td>Vario</td>
+                        <td>Antipasto</td>
+                        <td></td>
+                        <td>8,5</td>
+                        <td>9</td>
+                        <td>8,5</td>
+                        <td>9</td>
+                        <td>8,5</td>
+                        <td>43,5</td>
+                        <td></td>
+                        <td></td>
+                        <td>43,5</td>
+                    </tr>
+                    <tr>
+                        <td>Luca Pradella</td>
+                        <td>Pasta Fredda</td>
+                        <td>Primo</td>
+                        <td>6</td>
+                        <td>7,5</td>
+                        <td></td>
+                        <td>7,5</td>
+                        <td>8</td>
+                        <td>9,5</td>
+                        <td>38,5</td>
+                        <td></td>
+                        <td></td>
+                        <td>38,5</td>
+                    </tr>
+                    <tr>
+                        <td>Davide Biscuola</td>
+                        <td>Metal Condom</td>
+                        <td>Secondo</td>
+                        <td>6,5</td>
+                        <td>7,5</td>
+                        <td>8</td>
+                        <td>8</td>
+                        <td>6,5</td>
+                        <td></td>
+                        <td>36,5</td>
+                        <td></td>
+                        <td></td>
+                        <td>36,5</td>
+                    </tr>
+                    <tr>
+                        <td>Gianluca Montrasio</td>
+                        <td>Torta Bomba</td>
+                        <td>Dolce</td>
+                        <td>7</td>
+                        <td>9</td>
+                        <td>9,5</td>
+                        <td></td>
+                        <td>9,5</td>
+                        <td>9</td>
+                        <td>44</td>
+                        <td></td>
+                        <td></td>
+                        <td>44</td>
+                    </tr>
+                    <tr>
+                        <td>Angelo Menno</td>
+                        <td>Vari</td>
+                        <td>Bere</td>
+                        <td>8</td>
+                        <td></td>
+                        <td>9</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>7,5</td>
+                        <td>41,5</td>
+                        <td></td>
+                        <td></td>
+                        <td>41,5</td>
+                    </tr>
+                    <tr>
+                        <td>Andrea Inzoli</td>
+                        <td>Vari</td>
+                        <td>Bere</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>7,5</td>
+                        <td>8</td>
+                        <td></td>
+                        <td>7</td>
+                        <td>39,5</td>
+                        <td></td>
+                        <td></td>
+                        <td>39,5</td>
                     </tr>
                 </tbody>
             </table>
